fix: cleaning vector module v7